--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "fs": "0.0.1-security",
     "graphql": "^14.5.8",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^8.0.0",
     "prettier-package-json": "^2.1.3",
     "radium": "^0.26.0",
     "react": "^16.10.2",
@@ -37,6 +37,7 @@
     "styletron-react": "^5.2.7"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^3.0.0",
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "^1.1.1",
     "gh-pages": "^2.2.0",
